Fix for Safari flickering bug 2

--- a/src/components/ContentContainer.module.css
+++ b/src/components/ContentContainer.module.css
@@ -13,6 +13,7 @@
 
 .page-front {
     transform: rotateY(0deg);
+    -webkit-backface-visibility: hidden;
     border-left: 1px dotted var(--book-bg-color);
 }
 
